--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ code {
       </div></div>
     </nav>
     <section data-id=install>
+      <p>A joint project of Zixaphir and Seaweed.</p>
       <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, <b class=opera>Opera</b> and <b class=opera>Opera Mobile</b> are supported.</p>
 
       <h1><a class=install href="https://github.com/seaweedchan/4chan-x/raw/4chanX/4chan_x.user.js">Install 4chan X</a></h1>
@@ -280,7 +281,7 @@ code {
     </section>
     <section data-id=bonus>
       <p>
-        <a href=http://userstyles.org/styles/48538/4chan-4chan-x-css-defaults>4chan X CSS defaults</a>: Advanced styling features.<br>
+        <a href=http://zixaphir.github.com/appchan-x/>Appchan X</a>: An alternative to 4chan X with styling options, created by Zixaphir.<br>
         <a href=http://userstyles.org/styles/browse/4chan>Userstyles.org</a>: For 4chan userstyles.
       </p><p>
         <a href=http://userscripts.org/scripts/show/83584>YouTube Link Title</a>: YouTube title and embedding if the built in solution isn't enough.<br>
