--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@ code {
 .opera::before {
   background-position: -31px 0;
 }
+.authors {
+  margin: 0 auto;
+}
     </style>
   </head>
   <body>
@@ -193,7 +196,7 @@ code {
       </div></div>
     </nav>
     <section data-id=install>
-      <p>A joint project of Zixaphir and Seaweed.</p>
+      <p class='authors'>A joint project of Zixaphir and Seaweed.</p>
       <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, <b class=opera>Opera</b> and <b class=opera>Opera Mobile</b> are supported.</p>
 
       <h1><a class=install href="https://github.com/seaweedchan/4chan-x/raw/4chanX/4chan_x.user.js">Install 4chan X</a></h1>
