--- a/index.html
+++ b/index.html
@@ -180,10 +180,6 @@ code {
 .opera::before {
   background-position: -31px 0;
 }
-.authors {
-  margin: 0 auto;
-  width: 300px;
-}
     </style>
   </head>
   <body>
@@ -197,10 +193,11 @@ code {
       </div></div>
     </nav>
     <section data-id=install>
-      <p class='authors'>A joint project of Zixaphir and Seaweed.</p>
+      <center><p class='authors'>A joint project of Zixaphir and Seaweed.</p></center>
       <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, <b class=opera>Opera</b> and <b class=opera>Opera Mobile</b> are supported.</p>
 
-      <h1><a class=install href="https://github.com/seaweedchan/4chan-x/raw/4chanX/4chan_x.user.js">Install 4chan X</a></h1>
+      <h1><a class=install href="https://github.com/seaweedchan/4chan-x/stable/4chanX/4chan_x.user.js">Install 4chan X</a></h1>
+      <center><p>Or you can help test future releases with the <a href="https://github.com/seaweedchan/4chan-x/stable/4chanX/4chan_x.user.js">master branch</a>.</p></center>
 
       <b class=chrome>Chrome</b>:
       <ol>
