--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@ code {
             <li>Custom Navigation</li>
             <li>Ban Checking</li>
             <li>Custom CSS</li>
+            <li>Emoji</li>
           </ul>
         </li>
         <li>Linkification
