--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='shortcut icon' href=favicon.png>
     <script>
 (function(){
-  var d = document;
+  var d = document, engine = /WebKit|Presto|Gecko/.exec(navigator.userAgent)[0].toLowerCase();
   function $(s){return d.querySelector(s, d.body)}
   function id(i){return $('[data-id='+i+']')}
   function a(i){return $('[href="#'+i+'"]')}
@@ -22,12 +22,26 @@
   }, false);
   var d = document;
   d.addEventListener('DOMContentLoaded', function loaded() {
-    var hash, el;
+    var hash, el, install;
     d.removeEventListener('DOMContentLoaded', loaded, false);
     hash = window.location.hash.slice(1) || 'install';
     el = id(hash) || id('install');
     el.className = 'active';
     a(el.dataset.id).className = 'on';
+    console.log('we are here')
+    install = id('installLink');
+    console.log(install);
+    console.log('huh');
+    switch (engine) {
+      case 'webkit':
+        install.href = "https://chrome.google.com/webstore/detail/4chan-x/jpmgpmhijdpodideljadidfdikkppbfp"
+        break;
+      case 'gecko':
+        install.href = "https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js"
+        break;
+      case 'opera':
+        install.href = "https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.js"
+    };
   }, false);
 })();
     </script>
@@ -203,7 +217,7 @@ code {
       <center><p class='authors'>A joint project of Zixaphir and Seaweed.</p><a class='refugees' href='https://github.com/seaweedchan/4chan-x/issues/17' target='_blank'>It's coming.</a>
       <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, <b class=opera>Opera</b> and <b class=opera>Opera Mobile</b> are supported.</p></center>
 
-      <h1><a class=install href="https://raw.github.com/seaweedchan/4chan-x/stable/4chan_x.user.js">Install 4chan X</a></h1>
+      <h1><a class=install data-id=installLink href="https://raw.github.com/seaweedchan/4chan-x/stable/4chan_x.user.js">Install 4chan X</a></h1>
 
       <b class=chrome>Chrome</b>:
       <ol>
