Opera -> Presto, silly Zixaphir

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       case 'gecko':
         install.href = "https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js"
         break;
-      case 'opera':
+      case 'presto':
         install.href = "https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.js"
     };
   }, false);
