Add verification file for chrome

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ code {
       <center><p class='authors'>A joint project of Zixaphir and Seaweed.</p><p class='refugees'>The new v3-based version is out!</p><span>Make sure you export your settings and disable your old userscript before installing.</span>
       <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, and <b class=opera>Opera</b> are supported.</p></center>
 
-      <h1><a class=install data-id=installLink href="https://raw.github.com/seaweedchan/4chan-x/stable/4chan_x.user.js" target>Install 4chan X</a></h1>
+      <h1><a class=install data-id=installLink href="https://raw.github.com/seaweedchan/4chan-x/stable/4chan_x.user.js">Install 4chan X</a></h1>
       <center style=margin-top:-20px;><a class=chrome href=https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js class=firefox></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.js class=opera></a></center>
 
       <b class=chrome>Chrome</b>:
