--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ code {
       <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, and <b class=opera>Opera</b> are supported.</p></center>
 
       <h1><a class=install data-id=installLink href="https://raw.github.com/seaweedchan/4chan-x/stable/4chan_x.user.js">Install 4chan X</a></h1>
-      <center style=margin-top:-20px;><a onclick="chrome.webstore.install()" id="chrome-install" class=chrome href=https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js class=firefox></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.js class=opera></a></center>
+      <center style=margin-top:-20px;><a onclick="chrome.webstore.install()" class=chrome href=https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js class=firefox></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.js class=opera></a></center>
 
       <b class=chrome>Chrome</b>:
       <ol>
