Fix posting from index.

--- a/src/General/html/Features/QuickReply.html
+++ b/src/General/html/Features/QuickReply.html
@@ -27,14 +27,14 @@
   </div>
   <input type=file multiple>
   <div id=qr-thread-select>
-    <select title='Create a new thread / Reply'>
+    <select data-name=thread title='Create a new thread / Reply'>
       <option value=new>New thread</option>
     </select>
-  </div> 
+  </div>
   <label id=qr-spoiler-label>
     <input type=checkbox id=qr-file-spoiler title='Spoiler image' tabindex=90>Spoiler?
   </label>
 </form>
 <datalist id="list-name"></datalist>
 <datalist id="list-email"></datalist>
-<datalist id="list-sub"></datalist> 
+<datalist id="list-sub"></datalist>
