Spoiler styling, close #64

--- a/src/General/html/Features/QuickReply.html
+++ b/src/General/html/Features/QuickReply.html
@@ -31,12 +31,12 @@
         <a id=dump-button title='Dump list'>+</a>
       </span>
     </span>
-    <input type=submit tabindex=60>
+    <label id=qr-spoiler-label>
+      <input type=checkbox id=qr-file-spoiler title='Spoiler image' tabindex=70>
+    </label>
+    <input type=submit tabindex=80>
   </div>
   <input type=file multiple>
-  <label id=qr-spoiler-label>
-    <input type=checkbox id=qr-file-spoiler title='Spoiler image' tabindex=90>Spoiler?
-  </label>
 </form>
 <datalist id="list-name"></datalist>
 <datalist id="list-email"></datalist>
