Update changelog, change note for custom nav

--- a/src/General/html/Settings/Advanced.html
+++ b/src/General/html/Settings/Advanced.html
@@ -6,6 +6,7 @@
 <fieldset>
   <legend>Custom Board Navigation</span></legend>
   <div><textarea name=boardnav class=field spellcheck=false></textarea></div>
+  <span class=note>New lines will be converted into spaces.</span><br><br>
   <div>In the following, <code>board</code> can translate to a board ID (<code>a</code>, <code>b</code>, etc...), the current board (<code>current</code>), or the Status/Twitter link (<code>status</code>, <code>@</code>).</div>
   <div>
     For example:<br>
@@ -24,7 +25,6 @@
   <div>External link: <code>external-text:"Google","http://www.google.com"</code></div>
   <div>Combinations are possible: <code>board-index-text:"VIP Index"</code></div>
   <div>Full board list toggle: <code>toggle-all</code></div>
-  <div>Line breaks are allowed and will be replaced with spaces</div>
 </fieldset>
 
 <fieldset>
