Add board selection to the archive selection. Close seaweedchan/issues/80

--- a/src/General/html/Settings/Advanced.html
+++ b/src/General/html/Settings/Advanced.html
@@ -1,6 +1,7 @@
 <fieldset>
   <legend>Archiver</legend>
   <div class="warning" #{if Conf['404 Redirect'] then 'hidden' else ''}><code>404 Redirect</code> is disabled.</div>
+  <select id='archive-board-select'></select>
   <table id='archive-table'>
     <thead>
       <th>Thread redirection</th>
