--- a/src/General/html/Settings/Batch-Theme.html
+++ b/src/General/html/Settings/Batch-Theme.html
@@ -1,12 +1,6 @@
  <a id=newtheme href='javascript:;'>New Theme</a>
  /
- <a id=import href='javascript:;'>Import Theme</a>
+ <a id=import href='javascript:;' title='From Appchan X, Oneechan, or 4chan SS'>Import Theme</a>
  <input id=importbutton type=file hidden>
- /
- <a id=SSimport href='javascript:;'>Import from 4chan SS</a>
- <input id=SSimportbutton type=file hidden>
- /
- <a id=OCimport href='javascript:;'>Import from Oneechan</a>
- <input id=OCimportbutton type=file hidden>
  /
  <a id=tUndelete href='javascript:;'>Undelete Theme</a>
