--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ code {
       </div></div>
     </nav>
     <section data-id=install>
-      <center><p class='authors'>A joint project of Zixaphir and Seaweed.</p>
+      <center><p>Need more rice? Try <a href=http://seaweedchan.github.io/OneeChan/>OneeChan</a>!</p><p class='authors'>A joint project of Zixaphir and Seaweed.</p>
       <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, and <b class=opera>Opera</b> are supported.</p> <b class=operanext>Opera Next 15</b> is also supported.</center>
 
       <h1><a class=install data-id=installLink href="https://raw.github.com/seaweedchan/4chan-x/stable/4chan_x.user.js">Install 4chan X</a></h1>
