--- a/src/General/html/Features/QuickReply.html
+++ b/src/General/html/Features/QuickReply.html
@@ -5,12 +5,12 @@
       <option value=new>New thread</option>
     </select>
   </div>
-  <a href=javascript:; class=close title=Close>×</a>
+  <a href=javascript:; class=close title=Close>✖</a>
 </div>
 <form>
   <div class=persona>
-    <input name=name  data-name=name  list="list-name" placeholder=Name    class=field size=1 tabindex=10>
-    <input name=email data-name=email list="list-email" placeholder=E-mail  class=field size=1 tabindex=20>
+    <input name=name  data-name=name  list="list-name" placeholder=Name class=field size=1 tabindex=10>
+    <input name=email data-name=email list="list-email" placeholder=E-mail class=field size=1 tabindex=20>
     <input name=sub   data-name=sub   list="list-sub" placeholder=Subject class=field size=1 tabindex=30>
   </div>
   <div class=textarea>
@@ -32,7 +32,7 @@
         <span class=description>Spoiler</span>
         <a id=dump-button title='Dump list'>+</a>
         <span class=description>Dump</span>
-        <a id=qr-filerm href=javascript:; title='Remove file'>×</a>
+        <a id=qr-filerm href=javascript:; title='Remove file'>✖</a>
         <span class=description>Remove File</span>
       </span>
     </span>
