--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     a(el.dataset.id).className = 'on';
     install = id('installLink');
     if (engine === 'opera')
-      install.href = "https://addons.opera.com/en/extensions/details/4chan-x/?display=en";
+      install.href = "https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi";
     else if (engine === 'firefox')
       install.href = "https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js";
     else if (engine === 'chrome') {
@@ -233,7 +233,7 @@ code {
       <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, and <b class=opera>Opera</b> are supported.</p> <b class=operanext>Opera Next 15</b> is also supported.</center>
 
       <h1><a class=install data-id=installLink href="https://raw.github.com/seaweedchan/4chan-x/stable/4chan_x.user.js">Install 4chan X</a></h1>
-      <center style=margin-top:-20px;><a class=chrome href=https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js class=firefox></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.js class=opera></a><a href=https://addons.opera.com/en/extensions/details/4chan-x/?display=en class=operanext></a></center>
+      <center style=margin-top:-20px;><a class=chrome href=https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js class=firefox></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.js class=opera></a><a href=https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi class=operanext></a></center>
 
       <b class=chrome>Chrome</b>:
       <ol>
@@ -267,7 +267,8 @@ code {
 
       <b class=operanext>Opera Next</b>:
       <ol>
-        <li>Install 4chan X (if using Opera Next 15 or higher). That's it.</li>
+        <li>Install the <a href=https://addons.opera.com/en/extensions/details/download-chrome-extension-9/?display=en>Download Chrome Extension</a> extension if you don't already have it.</li>
+        <li>Install 4chan X (if using Opera Next 15 or higher) through the Chrome extension page. That's it.</li>
         <li>4chan X will be automatically updated by Opera Next.</li>
       </ol>
     </section>
