Remove Unread Favicons option Replace instead with a No Unread option in dropdown

--- a/src/General/html/Settings/Advanced.html
+++ b/src/General/html/Settings/Advanced.html
@@ -82,12 +82,13 @@
 </fieldset>
 
 <fieldset>
-  <legend>Unread Favicon <span class=warning #{if Conf['Unread Favicon'] then 'hidden' else ''}>is disabled.</span></legend>
+  <legend>Unread Favicon</legend>
   <select name=favicon>
     <option value=ferongr>ferongr</option>
     <option value=xat->xat-</option>
     <option value=Mayhem>Mayhem</option>
     <option value=Original>Original</option>
+    <option value="No Unread">No Unread</option>
   </select>
   <span class=favicon-preview></span>
 </fieldset>
