--- a/src/General/html/Features/QuickReply.html
+++ b/src/General/html/Features/QuickReply.html
@@ -10,9 +10,9 @@
 </div>
 <form>
   <div class=persona>
-    <input data-name=name  list="list-name"  placeholder=Name    class=field size=1 tabindex=10>
-    <input data-name=email list="list-email" placeholder=E-mail  class=field size=1 tabindex=20>
-    <input data-name=sub   list="list-sub"   placeholder=Subject class=field size=1 tabindex=30>
+    <input name=name  data-name=name  list="list-name" placeholder=Name    class=field size=1 tabindex=10>
+    <input name=email data-name=email list="list-email" placeholder=E-mail  class=field size=1 tabindex=20>
+    <input name=sub   data-name=sub   list="list-sub" placeholder=Subject class=field size=1 tabindex=30> 
   </div>
   <div class=textarea>
     <textarea data-name=com placeholder=Comment class=field tabindex=40></textarea>
