Instantaneous index page navigation.
Also fix page navigation keybinds.

--- a/html/General/Index-pagelist.html
+++ b/html/General/Index-pagelist.html
@@ -1,11 +1,11 @@
 <div class="prev">
   <a>
-    <button>Previous</button>
+    <button disabled>Previous</button>
   </a>
 </div>
 <div class="pages"></div>
 <div class="next">
   <a>
-    <button>Next</button>
+    <button disabled>Next</button>
   </a>
 </div>
