Indicate the elapsed time since the last index refresh at the top of the index.

--- a/html/General/Index-navlinks.html
+++ b/html/General/Index-navlinks.html
@@ -1,2 +1,3 @@
+[<time id="index-last-refresh" title="Last index refresh" data-init="1">...</time>]&nbsp;
 [<a href="./catalog">Catalog</a>]&nbsp;
 <input type="search" id="index-search" placeholder="Search">
