--- a/html/General/Index-navlinks.html
+++ b/html/General/Index-navlinks.html
@@ -1,3 +1,3 @@
-[<time id="index-last-refresh" title="Last index refresh" data-init="1">...</time>]&nbsp;
 [<a href="./catalog">Catalog</a>]&nbsp;
-<input type="search" id="index-search" placeholder="Search">
+[<time id="index-last-refresh" title="Last index refresh" data-init="1">...</time>]&nbsp;
+<input type="search" id="index-search" class="field" placeholder="Search">
