Use fa-plus for the #add-post in the QR. #1338

--- a/html/Posting/QR.html
+++ b/html/Posting/QR.html
@@ -15,7 +15,7 @@
   </div>
   <div id="dump-list-container">
     <div id="dump-list"></div>
-    <a id="add-post" href="javascript:;" title="Add a post">+</a>
+    <a href="javascript:;" id="add-post" class="fa fa-plus" title="Add a post"></a>
   </div>
   <div class="textarea">
     <textarea data-name="com" placeholder="Comment" class="field"></textarea>
