Use fa-times-circle instead of fa-times for clearing actions.

--- a/html/Posting/QR.html
+++ b/html/Posting/QR.html
@@ -29,7 +29,7 @@
       <span id="qr-no-file">No selected file</span>
       <input id="qr-filename" data-name="filename" spellcheck="false">
       <span id="qr-filesize"></span>
-      <a href="javascript:;" id="qr-filerm" class="fa fa-times" title="Remove file"></a>
+      <a href="javascript:;" id="qr-filerm" class="fa fa-times-circle" title="Remove file"></a>
       <input type="checkbox" id="qr-file-spoiler" title="Spoiler image">
     </div>
   </div>
