Redo FontAwesome stuff, I guess.

--- a/src/General/html/Settings/Settings.html
+++ b/src/General/html/Settings/Settings.html
@@ -8,7 +8,7 @@
     <a href='<%= meta.page %>' target=_blank><%= meta.name %></a> |
     <a href='<%= meta.repo %>blob/<%= meta.mainBranch %>/CHANGELOG.md' target=_blank>#{g.VERSION}</a> |
     <a href='<%= meta.repo %>blob/<%= meta.mainBranch %>/README.md#reporting-bugs-and-suggestions' target=_blank>Issues</a> |
-    <a href=javascript:; class=close title=Close>✖</a>
+    <a href=javascript:; class='close fa' title=Close>\uf00d</a>
   </div>
 </nav>
 <hr>
