--- a/src/General/html/Features/QuickReply.html
+++ b/src/General/html/Features/QuickReply.html
@@ -5,7 +5,7 @@
       <option value=new>New thread</option>
     </select>
   </div>
-  <a href=javascript:; class=close title=Close>✖</a>
+  <a href=javascript:; class='close fa' title=Close>\uf00d</a>
 </div>
 <form>
   <div class=persona>
@@ -32,7 +32,7 @@
         <span class=description>Spoiler</span>
         <a id=dump-button title='Dump list'>+</a>
         <span class=description>Dump</span>
-        <a id=qr-filerm href=javascript:; title='Remove file'>✖</a>
+        <a id=qr-filerm href=javascript:; title='Remove file' class=fa>\uf00d</a>
         <span class=description>Remove File</span>
       </span>
     </span>
