--- a/src/General/html/Monitoring/ThreadWatcher.html
+++ b/src/General/html/Monitoring/ThreadWatcher.html
@@ -1,2 +1,2 @@
-<div class="move">Thread Watcher <span id="watcher-status"></span><a class="menu-button brackets-wrap" href="javascript:;"><i></i></a><a class=close href=javascript:;>×</a></span></div>
+<div class="move">Thread Watcher <span id="watcher-status"></span><a class="menu-button" href="javascript:;"><i class="fa fa-angle-down"></i></a><a class=close href=javascript:;>×</a></span></div>
 <div id="watched-threads"></div>
