--- a/src/General/html/Features/Index-navlinks.html
+++ b/src/General/html/Features/Index-navlinks.html
@@ -1,4 +1,4 @@
 [<a href="./catalog">Catalog</a>]&nbsp;
-[<time id="index-last-refresh" title="Last index refresh">...</time>]&nbsp;
+<time id="index-last-refresh" title="Last index refresh">...</time>&nbsp;
 <input type="search" id="index-search" class="field" placeholder="Search">
 <a id="index-search-clear" href="javascript:;" title="Clear search">×</a>
