--- a/src/General/html/Settings/Advanced.html
+++ b/src/General/html/Settings/Advanced.html
@@ -65,7 +65,7 @@
 </fieldset>
 
 <fieldset>
-  <legend>Quick Reply Personas <span class="warning" #{if Conf['Quick Reply'] then 'hidden' else ''}>is disabled.</span></legend>
+  <legend>Quick Reply Personas</legend>
   <textarea class=personafield name="QR.personas" class="field" spellcheck="false"></textarea>
   <p>
     One item per line.<br>
