Add the 4chanJS favicon to settings

--- a/src/General/html/Settings/Advanced.html
+++ b/src/General/html/Settings/Advanced.html
@@ -86,6 +86,7 @@
   <select name=favicon>
     <option value=ferongr>ferongr</option>
     <option value=xat->xat-</option>
+    <option value=4chanJS>4chanJS</option>
     <option value=Mayhem>Mayhem</option>
     <option value=Original>Original</option>
   </select>
