--- a/src/General/html/Features/Index-navlinks.html
+++ b/src/General/html/Features/Index-navlinks.html
@@ -1,6 +1,6 @@
-<a href=.././ id=returnlink>Return</a> 
-[<a href=javascript:; id=cataloglink>Catalog</a>] 
-<a href="#bottom" id=bottomlink>Bottom</a> 
-<time id="index-last-refresh" title="Last index refresh">...</time> 
+<span class=brackets-wrap id=returnlink><a href=.././>Return</a></span> 
+<span class=brackets-wrap id=cataloglink><a href=javascript:;>Catalog</a></span> 
+<span class=brackets-wrap id=bottomlink><a href="#bottom">Bottom</a></span> 
+<span class=brackets-wrap id="index-last-refresh"><time title="Last index refresh">...</time></span> 
 <input type="search" id="index-search" class="field" placeholder="Search">
 <a id="index-search-clear" href="javascript:;" title="Clear search">×</a>
