--- a/html/General/Settings-section-Sauce.html
+++ b/html/General/Settings-section-Sauce.html
@@ -5,7 +5,7 @@
   <li><code>%TURL</code>: Thumbnail URL.</li>
   <li><code>%URL</code>: Full image URL.</li>
   <li><code>%MD5</code>: MD5 hash.</li>
-  <li><code>%FNAME</code>: Original file name.</li>
+  <li><code>%NAME</code>: Original file name.</li>
   <li><code>%board</code>: Current board.</li>
 </ul>
 <textarea name="sauces" class="field" spellcheck="false"></textarea>
