--- a/index.html
+++ b/index.html
@@ -216,34 +216,7 @@ code {
       </div></div>
     </nav>
     <section data-id=install>
-      <center><p>Need more rice? Try <a href=http://seaweedchan.github.io/OneeChan/>OneeChan</a>!</p><p class='authors'>A joint project of Zixaphir and Seaweed.</p>
-      <p>The latest stable releases of <b class=chrome>Chrome</b>, <b class=firefox>Firefox</b>, and <b class=opera>Opera</b> (15+) are supported.</p> </center>
-
-      <h1><a class=install data-id=installLink href="https://raw.github.com/seaweedchan/4chan-x/stable/4chan_x.user.js">Install 4chan X</a></h1>
-      <center style=margin-top:-20px;><a class=chrome href=https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi></a><a href=https://github.com/seaweedchan/4chan-x/raw/stable/builds/4chan-X.user.js class=firefox></a><a href=https://chrome.google.com/webstore/detail/4chan-x/poojninacjpckfopjogaokeegibhkidi class=opera></a></center>
-
-      <b class=chrome>Chrome</b>:
-      <ol>
-        <li>Install 4chan X. That's it.</li>
-        <li>4chan X will be automatically updated by Chrome.</li>
-      </ol>
-
-      <b class=firefox>Firefox</b>:
-      <ol>
-        <li>If you don't have <a href=https://addons.mozilla.org/firefox/addon/greasemonkey/>Greasemonkey</a> installed:
-          <ol>
-            <li>Install <a href=https://addons.mozilla.org/firefox/addon/greasemonkey/>Greasemonkey</a>.</li>
-            <li>Restart Firefox.</li>
-          </ol>
-        </li>
-        <li>Install 4chan X.</li>
-      </ol>
-
-      <b class=opera>Opera</b>:
-      <ol>
-        <li>Install 4chan X (if using Opera 15 or higher) through the Chrome extension page. That's it.</li>
-        <li>4chan X will be automatically updated by Opera.</li>
-      </ol>
+      <center><br>As of January 31st, 2014, this fork of 4chan X is discontinued,<br>due to my leaving 4chan and a lack of maintainer.<br><br>Try <a href="http://zixaphir.github.io/appchan-x/">Zixaphir's</s>, <a href="http://ihavenoface.github.io/4chan-x/">ihavenoface's</a<, or <a href="http://4chan-x.just-believe.in/">Mayhem's</a> forks instead.<br>Or, <a href="https://github.com/seaweedchan/4chan-x">browse the code, fork it, or install at your own risk.</a></center>
     </section>
     <section data-id=features>
           <ul>
