--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ code {
       </div></div>
     </nav>
     <section data-id=install>
-      <center><br>As of January 31st, 2014, this fork of 4chan X is discontinued,<br>due to my leaving 4chan and a lack of maintainer.<br><br>Try <a href="http://zixaphir.github.io/appchan-x/">Zixaphir's</s>, <a href="http://ihavenoface.github.io/4chan-x/">ihavenoface's</a<, or <a href="http://4chan-x.just-believe.in/">Mayhem's</a> forks instead.<br>Or, <a href="https://github.com/seaweedchan/4chan-x">browse the code, fork it, or install at your own risk.</a></center>
+      <center><br>As of January 31st, 2014, this fork of 4chan X is discontinued,<br>due to my leaving 4chan and a lack of maintainer.<br><br>Try <a href="http://zixaphir.github.io/appchan-x/">Zixaphir's</s>, <a href="http://ihavenoface.github.io/4chan-x/">ihavenoface's</a>, or <a href="http://4chan-x.just-believe.in/">Mayhem's</a> forks instead.<br>Or, <a href="https://github.com/seaweedchan/4chan-x">browse the code, fork it, or install at your own risk.</a></center>
     </section>
     <section data-id=features>
           <ul>
