Add a show/hide hidden threads toggle for the catalog mode.

--- a/html/General/Index-navlinks.html
+++ b/html/General/Index-navlinks.html
@@ -2,4 +2,4 @@
 [<time id="index-last-refresh" title="Last index refresh">...</time>]&nbsp;
 <input type="search" id="index-search" class="field" placeholder="Search">
 <a id="index-search-clear" class="fa fa-times-circle" href="javascript:;"></a>
-<span id="hidden-label" hidden> &mdash; <span id="hidden-count"></span></span>
+<span id="hidden-label" hidden> &mdash; <span id="hidden-count"></span> <span id="hidden-toggle" hidden>[<a href="javascript:;">Show</a>]</span></span>
