Set the catalog thumbnail via background image, save one element. Also tiny fixes here and there.

--- a/html/General/Thread-catalog-view.html
+++ b/html/General/Thread-catalog-view.html
@@ -1,5 +1,4 @@
-<a href="/#{thread.board}/res/#{thread.ID}" target="_blank">
-  <img src="#{src}" class="thumb #{imgClass or ''}" #{if imgWidth then "width='#{imgWidth}'"} #{if imgHeight then "height='#{imgHeight}'"}>
+<a href="/#{thread.board}/res/#{thread.ID}" target="_blank" class="thumb">
   <div class="thread-icons"></div>
 </a>
 <div class="thread-stats" title="Post count / File count / Page count">
