--- a/html/General/Settings-section-Rice.html
+++ b/html/General/Settings-section-Rice.html
@@ -3,6 +3,7 @@
   <div><input name="boardnav" class="field" spellcheck="false"></div>
   <div>In the following, <code>board</code> can translate to a board ID (<code>a</code>, <code>b</code>, etc...), the current board (<code>current</code>), or the Twitter link (<code>@</code>).</div>
   <div>Board link: <code>board</code></div>
+  <div>Archive link: <code>board-archive</code></div>
   <div>Title link: <code>board-title</code></div>
   <div>Board link (Replace with title when on that board): <code>board-replace</code></div>
   <div>Full text link: <code>board-full</code></div>
