Bring back return/catalog links.

--- a/html/General/Index-navlinks.html
+++ b/html/General/Index-navlinks.html
@@ -1,3 +1,4 @@
+[<a id="index-mode-toggle" href="./"></a>]&nbsp;
 [<time id="index-last-refresh" title="Last index refresh">...</time>]&nbsp;
 <input type="search" id="index-search" class="field" placeholder="Search">
 <a id="index-search-clear" class="fa fa-times-circle" href="javascript:;"></a>
