Add Metro favicon (why not?)

--- a/src/General/html/Settings/Advanced.html
+++ b/src/General/html/Settings/Advanced.html
@@ -88,6 +88,7 @@
     <option value=xat->xat-</option>
     <option value=Mayhem>Mayhem</option>
     <option value=Original>Original</option>
+    <option value=Metro>Metro</option>
   </select>
   <span class=favicon-preview></span>
 </fieldset>
