Start working on remote upload (Chrome-only so far)

--- a/src/General/html/Features/QuickReply.html
+++ b/src/General/html/Features/QuickReply.html
@@ -28,6 +28,7 @@
       <input id="qr-filename" data-name="filename" spellcheck="false">
       <span id=qr-extras-container>
         <a id=qr-filerm href=javascript:; title='Remove file'>×</a>
+        <a id=url-button title='Post from url'>!</a>
         <a id=dump-button title='Dump list'>+</a>
       </span>
     </span>
