--- a/src/General/html/Features/QuickReply.html
+++ b/src/General/html/Features/QuickReply.html
@@ -22,13 +22,14 @@
     <div id=dump-list></div>
     <a id=add-post href=javascript:; title="Add a post" tabindex=50>+</a>
   </div>
+  </div>
   <div id=file-n-submit>
     <span id=qr-filename-container class=field tabindex=60>
       <span id=qr-no-file>No selected file</span>
       <input id="qr-filename" data-name="filename" spellcheck="false">
       <span id=qr-extras-container>
         <a id=qr-filerm href=javascript:; title='Remove file'>×</a>
-        <a id=url-button title='Post from url'>!</a>
+        <a id=url-button title='Post from url'><i class="fa fa-link"></i></a>
         <a id=dump-button title='Dump list'>+</a>
       </span>
     </span>
