Add board-mode and board-sort to custom board navigation.

--- a/html/General/Settings-section-Rice.html
+++ b/html/General/Settings-section-Rice.html
@@ -8,6 +8,9 @@
   <div>Board link (Replace with title when on that board): <code>board-replace</code></div>
   <div>Full text link: <code>board-full</code></div>
   <div>Custom text link: <code>board-text:"VIP Board"</code></div>
+  <div>Index mode: <code>board-mode:"type"</code> where type is <code>paged</code>, <code>all threads</code> or <code>catalog</code></div>
+  <div>Index sort: <code>board-sort:"type"</code> where type is <code>bump order</code>, <code>last reply</code>, <code>creation date</code>, <code>reply count</code> or <code>file count</code></div>
+  <div>Combinations are possible: <code>board-text:"VIP Catalog"-mode:"catalog"-sort:"creation date"</code></div>
   <div>Full board list toggle: <code>toggle-all</code></div>
 </fieldset>
 
