--- a/html/Posting/QR.html
+++ b/html/Posting/QR.html
@@ -9,9 +9,9 @@
 <form>
   <div class="persona">
     <input type="button" id="dump-button" title="Dump list" value="+">
-    <input data-name="name"  list="list-name"  placeholder="Name"    class="field" size="1">
-    <input data-name="email" list="list-email" placeholder="E-mail"  class="field" size="1">
-    <input data-name="sub"   list="list-sub"   placeholder="Subject" class="field" size="1">
+    <input data-name="name"  name="name"  list="list-name"  placeholder="Name"    class="field">
+    <input data-name="email" name="email" list="list-email" placeholder="E-mail"  class="field">
+    <input data-name="sub"   name="sub"   list="list-sub"   placeholder="Subject" class="field">
   </div>
   <div id="dump-list"></div>
   <a href="javascript:;" id="add-post" class="fa fa-plus" title="Add a post"></a>
